# gcp-qe-architecture

./: .coverage  .gitignore  .sovereign_state.json  404.html  CONTRIBUTING.md  DEMO_REPORT_20260510_2256.md  DEMO_REPORT_20260510_2313.md  DEMO_REPORT_20260510_2314.md  DEMO_REPORT_20260510_2315.md  DEMO_REPORT_20260510_2316.md  DEMO_REPORT_20260510_2322.md  DEMO_REPORT_20260510_2323.md  DEMO_REPORT_20260510_2324.md  DEMO_REPORT_WAVE3_20260510_2330.md  DEMO_REPORT_WAVE3_20260510_2332.md  DEPLOYMENT.md  HISTORY.md  LICENSE  LIMITATIONS.md  MASTER_DEMO_REPORT.md  Makefile  OPERATIONAL_RUNBOOK.md  PROJECTS_CATALOG.md  PROVING_GROUNDS.md  QUICKSTART.md  README.md  ROADMAP.md  SECURITY.md  VALIDATION.md  VERSION  index.html  mkdocs.yml  objects.inv  pyproject.toml  pytest.ini  requirements.txt  ruff.toml  run_demo.py  run_golden_path.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
ARCHITECTURE/: index.html
architecture/: index.html
benchmarks/: duckdb_vs_cloud_latency.py
case-studies/: agentic-data-lakehouse.md  asco-orchestration.md  cloud-run-performance-stabilization.md  gke-resilience-improvement.md  multimodal-compliance-guardian.md  nemoclaw-autonomous-sre-v2.md  nemoclaw-autonomous-sre.md  sovereign-ai-rca.md
docs/: 01-quality-strategy-for-modernization.md  02-nfr-engineering-framework.md  03-quality-gates-model.md  05-performance-engineering.md  06-chaos-engineering-playbook.md  4-week-reflection.md  ARCHITECTURE.md  disclaimer.md  index.md  lessons-learned.md  maintenance-plan.md  real-world-usage.md  reflection.md
evidence/: ADVERSARIAL_LESSONS.md  DEMO_WALKTHROUGH.md  FINAL_MEDIUM_POST.md  PROJECT_AUDIT_SCORECARD.md  README.md  SOAK_TEST_REPORT_72H.md  SUMMARY.md  brutal-analysis-may-2026.md  gcp-2026-cost-benefit-analysis.md  golden_path_attestation.json  linkedin-launch-post.md  linkedin_launch_post.md  medium-article.md  pain-points-mapping-2026.md  sample_audit_trail.json  (+3 more)
(+252 files in other folders)
