[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Safety-core"
version = "0.2.0"
authors = [
  { name="Anandakrishnan Damodaran", email="anand@example.com" },
]
description = "A functional framework for GCP incident analysis and assisted remediation patterns."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "tenacity>=8.2.0",
    "pydantic>=2.0.0",
    "cryptography>=42.0.0",
    "cachetools>=5.3.0",
    "pydantic-settings>=2.2.0",
    "google-cloud-aiplatform>=1.60.0",
]

[project.optional-dependencies]
gcp = ["google-cloud-logging", "google-cloud-monitoring", "vertexai"]
dev = ["pytest", "pytest-cov", "hypothesis", "ruff"]

[project.urls]
"Homepage" = "https://github.com/anandkrshnn-ai/gcp-qe-architecture"

[tool.setuptools.packages.find]
where = ["src"]
